# moneyForward

./: .gitignore  README.md  vercel.json
backend/: .env.example  Cargo.toml  Dockerfile  railway.toml
backend/src/: config.rs  error.rs  main.rs
backend/src/db/: mod.rs  pool.rs
backend/src/handlers/: transaction.rs
backend/src/middleware/: audit.rs  auth.rs
backend/src/models/: audit.rs  category.rs  mod.rs  transaction.rs  user.rs
backend/src/sync/: fetcher.rs  job.rs  mod.rs
db/: 01_roles.sql  02_tables.sql  03_rls.sql  04_grants.sql  05_assets.sql  06_accounts.sql  07_premium.sql  08_connect.sql  09_reports.sql
frontend/: .env.local.example  next.config.mjs  package.json
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/v1/accounts/: route.ts
frontend/src/app/api/v1/assets/: route.ts
frontend/src/app/api/v1/balances/: route.ts
frontend/src/app/api/v1/dividends/: route.ts
frontend/src/app/api/v1/networth/: route.ts
frontend/src/app/auth/callback/: route.ts
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/accounts/: page.tsx
frontend/src/app/dashboard/assets/: page.tsx
frontend/src/app/dashboard/portfolio/: page.tsx
frontend/src/app/dashboard/reports/: page.tsx
frontend/src/app/dashboard/trend/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: account-card.tsx  asset-form.tsx  balance-form.tsx  net-worth-hero.tsx  plan-badge.tsx  transaction-form.tsx  trend-chart.tsx  upgrade-wall.tsx
frontend/src/hooks/: use-accounts.ts  use-assets.ts  use-balances.ts  use-networth.ts  use-transactions.ts  use-trend.ts
frontend/src/lib/: api-client.ts  audit.ts  auth.ts  db.ts  errors.ts  plan.ts  schemas.ts  supabase.ts
frontend/src/types/: bindings.ts
(+12 files in other folders)
