[package]
name    = "money-forward-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
# ── HTTP フレームワーク ─────────────────────────────────────
axum            = { version = "0.7", features = ["macros"] }
axum-extra      = { version = "0.9", features = ["typed-header"] }
tokio           = { version = "1",   features = ["full"] }
tower           = "0.4"
tower-http      = { version = "0.5", features = ["cors", "trace"] }

# ── データベース ────────────────────────────────────────────
sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "chrono",
  "decimal",
  "migrate",
] }

# ── 認証 ────────────────────────────────────────────────────
jsonwebtoken    = "9"
headers         = "0.4"

# ── バリデーション ──────────────────────────────────────────
validator       = { version = "0.18", features = ["derive"] }

# ── シリアライズ ────────────────────────────────────────────
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"

# ── 型共有 (ts-rs) ──────────────────────────────────────────
ts-rs           = { version = "9",  features = ["chrono-impl", "uuid-impl", "serde-compat"] }

# ── ユーティリティ ──────────────────────────────────────────
uuid            = { version = "1", features = ["v4", "serde"] }
chrono          = { version = "0.4", features = ["serde"] }
rust_decimal    = { version = "1",  features = ["serde-with-str"] }
anyhow          = "1"
thiserror       = "1"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy         = "0.15"
async-trait     = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
